--- a/style.css
+++ b/style.css
@@ -67,13 +67,13 @@ header{
     height: 520px;
     margin-top: 0px;
     font-family: "poppins" sans-serif;
-    background-image: url("cover1.jpg");
+    background-image: url("image/cover1.jpg");
     background-size: cover;
     background-position-y:-100px ;
 
 }
 .jumbotron:hover{
-    background-image: url("cover2.jpg");
+    background-image: url("image/cover2.jpg");
 }
 .text-brand{
     margin-left: 50px;
